tests/typeapp_perf/typeapp_perf.exp
Error ------------------------------------------------------------- test3.js:7:2

Error: test3.js:7
  7: (x.m(): empty); // error: string ~> empty, number ~> empty
      ^^^^^ Cannot cast `x.m()` to empty because number [1] is incompatible with empty [2].
  References:
    6: declare var x: C<string> | C<number>;
                                    ^^^^^^ [1]: number
    7: (x.m(): empty); // error: string ~> empty, number ~> empty
               ^^^^^ [2]: empty

Error ------------------------------------------------------------- test3.js:7:2

Error: test3.js:7
  7: (x.m(): empty); // error: string ~> empty, number ~> empty
      ^^^^^ Cannot cast `x.m()` to empty because string [1] is incompatible with empty [2].
  References:
    6: declare var x: C<string> | C<number>;
                        ^^^^^^ [1]: string
    7: (x.m(): empty); // error: string ~> empty, number ~> empty
               ^^^^^ [2]: empty


Found 2 errors
